--- a/kisa-webapp/package.json
+++ b/kisa-webapp/package.json
@@ -13,8 +13,11 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "framer-motion": "^10.16.4",
+        "moment": "^2.29.4",
         "react": "^18.2.0",
+        "react-calendar": "^4.6.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "recharts": "^2.8.0",
