--- a/kisa-gcs-service/kisa-gcs-service.csproj
+++ b/kisa-gcs-service/kisa-gcs-service.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>kisa_gcs_service</RootNamespace>
   </PropertyGroup>
   
+  <!-- NuGet 패키지 설정 -->
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
@@ -24,6 +25,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <!-- gRPC 서비스로 사용할 proto 파일 설정 -->
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server,Client" />
   </ItemGroup>
