--- a/kisa-dashboard-service/Dockerfile
+++ b/kisa-dashboard-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10
+FROM python:3.10-alpine
 LABEL authors="choiyungyu"
 
 # 이미지 내에서 명령어를 실행할 경로 설정
@@ -8,6 +8,7 @@ WORKDIR .
 COPY requirements.txt .
 
 # 이미지 생성 과정에서 실행될 명령
+RUN apk add --no-cache py3-setuptools
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
