--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,49 +2,66 @@ version: '3.8'
 
 services:
   dashboard-service:
-    container_name: kisa-dashboard-service
+    container_name: flask
     build:
       dockerfile: Dockerfile
       context: ./kisa-dashboard-service
+    restart: always
+    network_mode: host
+#    networks:
+#      - my-bridge-net
     ports:
       - "5050:5050"
     depends_on:
-      - mongodb
-    networks:
-      - mynetwork
+      - mongo-db
     environment:
       MONGO_URI_DB1: "mongodb://localhost:27017/prediction_service"
       MONGO_URI_DB2: "mongodb://localhost:27017/gcs_drone"
 
-  kisa-gcs-service:
-    container_name: kisa-gcs-service
+  gcs-service:
+    container_name: dotnet
     build:
       dockerfile: Dockerfile
       context: ./kisa-gcs-service
+    restart: always
+    network_mode: host
+#    networks:
+#      - my-bridge-net
     ports:
       - "5000:5000"
+    depends_on:
+      - mongo-db
 
-  mongodb:
+  mongo-db:
     image: mongo
-    container_name: kisa-mongodb
+    container_name: mongodb
+    restart: always
+    network_mode: host
+#    networks:
+#      - my-bridge-net
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
-    networks:
-      - mynetwork
 
   web-app:
-    container_name: kisa-web-app
+    container_name: react
     build:
       dockerfile: Dockerfile
       context: ./kisa-webapp
-
+    restart: always
+    network_mode: host
+#    networks:
+#      - my-bridge-net
     ports:
       - "3000:3000"
+    depends_on:
+      - dashboard-service
+      - gcs-service
 
 volumes:
   mongodb_data:
 
-networks:
-  mynetwork:
+#networks:
+#  my-bridge-net:
+#    driver: bridge
