--- a/kisa-gcs-system/Dockerfile
+++ b/kisa-gcs-system/Dockerfile
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 LABEL authors="choiyungyu"
 
 # Compile
-WORKDIR /kisa-gcs-service
+WORKDIR /kisa-gcs-system
 # Copy everything
 COPY . ./
 # Restore as distinct layers
@@ -12,7 +12,7 @@ RUN dotnet publish -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /kisa-gcs-service
+WORKDIR /kisa-gcs-system
 COPY --from=build-env /kisa-gcs-system/out .
 ENTRYPOINT ["dotnet", "kisa-gcs-service.dll"]
 
