update: mavlink+message parsing

--- a/kisa-gcs-system/kisa-gcs-system.csproj
+++ b/kisa-gcs-system/kisa-gcs-system.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <LangVersion>10.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks> <!-- Unsafe 코드 사용 허용 -->
     <NullableContextOptions>enable</NullableContextOptions> <!-- Null 검사 옵션 활성화 -->
     <Nullable>enable</Nullable>
@@ -22,9 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0" />
-    <PackageReference Include="MavSdk.Net" Version="1.1.3" />
     
-<!--    <PackageReference Include="Mavlink.Common" Version="1.0.0" />-->
 <!--    <PackageReference Include="DotNetty.Transport" Version="0.6.0" /> &lt;!&ndash; 네트워크 전송 계층을 처리하는 기능 제공 &ndash;&gt;-->
 <!--    <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />  &lt;!&ndash; 데이터 핸들링 및 프로토콜 처리를 위한 핸들러 및 유틸리티 클래스 제공 &ndash;&gt;-->
   </ItemGroup>
