--- a/kisa-predict-system/pyproject.toml
+++ b/kisa-predict-system/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 signalrcore = "^0.9.5"
+pandas = "^2.1.4"
+joblib = "^1.3.2"
+pymongo = "^4.6.1"
+scikit-learn = "^1.3.2"
 
 
 [build-system]
