--- a/kisa-predict-system/pyproject.toml
+++ b/kisa-predict-system/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^2.1.4"
 joblib = "^1.3.2"
 pymongo = "^4.6.1"
 scikit-learn = "^1.3.2"
+grpcio = "^1.62.1"
+grpcio-tools = "^1.62.1"
 
 
 [build-system]
