--- a/predict-system/pyproject.toml
+++ b/predict-system/pyproject.toml
@@ -11,7 +11,7 @@ signalrcore = "^0.9.5"
 pandas = "^2.1.4"
 joblib = "^1.3.2"
 pymongo = "^4.6.1"
-scikit-learn = "^1.3.2"
+scikit-learn = "1.3.2"
 grpcio = "^1.62.1"
 grpcio-tools = "^1.62.1"
 
