--- a/predict-system/requirements.txt
+++ b/predict-system/requirements.txt
@@ -1,6 +1,6 @@
-signalrcore~=0.9.5
 pandas~=2.1.4
+scikit-learn~=1.3.2
 joblib~=1.3.2
 pymongo~=4.6.1
-scikit-learn~=1.3.2
-signalrcore-async
+grpcio~=1.62.1
+grpcio-tools~=1.62.1
