update: docker-compose

--- a/predict-system/Dockerfile
+++ b/predict-system/Dockerfile
@@ -1,19 +1,51 @@
-FROM python:3.10-alpine
+FROM python:3.10
 LABEL authors="choiyungyu"
 
 # 이미지 내에서 명령어를 실행할 경로 설정
-WORKDIR /predict-system
+WORKDIR /app
 
-# 경로의 디렉토리 내용물을 컨테이너로 복사
-COPY requirements.txt .
+# Poetry 설치
+RUN pip install poetry
 
-# 이미지 생성 과정에서 실행될 명령
-RUN apk add --no-cache py3-setuptools
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# 애플리케이션 소스 코드 추가
+COPY pyproject.toml poetry.lock /app/
 
-# 소스코드 복사
-COPY . ./
+# Poetry에서 의존성 설치
+RUN poetry install
 
-# 컨테이너 실행시 최초 실행될 명령
-ENTRYPOINT ["python", "run.py"]
+# 애플리케이션 소스 코드 추가
+COPY . /app
+
+# 애플리케이션 실행
+CMD ["poetry", "run", "python", "run.py"]
+
+########################################################################################################################
+
+# 베이스 이미지로 alpine 리눅스 사용
+#FROM python:3.10-alpine
+#LABEL authors="choiyungyu"
+#
+## 필요한 패키지 설치
+#RUN apk update && \
+#    apk add --no-cache \
+#        build-base \
+#        libffi-dev \
+#        openssl-dev \
+#        libc-dev \
+#        linux-headers \
+#        g++
+#
+## 이미지 내에서 명령어를 실행할 경로 설정
+#WORKDIR /app
+#
+## requirements.txt 복사
+#COPY requirements.txt /app/
+#
+## 필요한 Python 패키지 설치
+#RUN pip install --no-cache-dir -r requirements.txt
+#
+## 애플리케이션 소스 코드 추가
+#COPY . /app
+#
+## 애플리케이션 실행
+#CMD ["python", "run.py"]
