--- a/predict-system/pyproject.toml
+++ b/predict-system/pyproject.toml
@@ -8,11 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.1.4"
+numpy = "^1.26.4"
 scikit-learn = "1.3.2"
-joblib = "^1.3.2"
 pymongo = "^4.6.1"
 grpcio = "^1.62.1"
 grpcio-tools = "^1.62.1"
+
 
 
 [build-system]
