--- a/predict-system/requirements.txt
+++ b/predict-system/requirements.txt
@@ -1,6 +1,15 @@
-pandas~=2.1.4
-scikit-learn~=1.3.2
-joblib~=1.3.2
-pymongo~=4.6.1
-grpcio~=1.62.1
-grpcio-tools~=1.62.1
+dnspython==2.6.1
+grpcio==1.62.1
+grpcio-tools==1.62.1
+joblib==1.3.2
+numpy==1.26.4
+pandas==2.2.1
+protobuf==4.25.3
+pymongo==4.6.3
+python-dateutil==2.9.0.post0
+pytz==2024.1
+scikit-learn==1.3.2
+scipy==1.13.0
+six==1.16.0
+threadpoolctl==3.4.0
+tzdata==2024.1
