--- a/web-app/.env
+++ b/web-app/.env
@@ -1,1 +1,3 @@
+# !주의 - REACT_APP_ 이라는 접두어를 붙여야 한다.
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyAEa848QMoOMkQkxIbCRLoAd15bOE6bNM4
+REACT_APP_GCS_API_SERVER="125.183.175.200:5000"
